--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tdRG3XvDQ+lFqfZuRq5oqs1Ty3v2KHch5t32qwK+Cak=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,12 +23,16 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID="1076410"
+PUSHER_APP_KEY="c94c2278c27e7e63b43c"
+PUSHER_APP_SECRET="45f32207f46e8550b9dd"
+PUSHER_APP_CLUSTER="ap1"
+PUSHER_CHANNEL=
+
